change categories names

--- a/public/index.html
+++ b/public/index.html
@@ -68,12 +68,12 @@
 
         <div id="key-view">
           <ul>
-            <li class="history-key"><h6>History</h6></li>
-            <li class="geography-key"><h6>Geography</h6></li>
-            <li class="sports-key"><h6>Sports</h6></li>
-            <li class="science-key"><h6>Science</h6></li>
-            <li class="general-knowledge-key"><h6>General Knowledge</h6></li>
-            <li class="entertainment-key"><h6>Entertainment</h6></li>
+            <li class="haskell-key"><h6>Haskell</h6></li>
+            <li class="python-key"><h6>Python</h6></li>
+            <li class="web-key"><h6>Web</h6></li>
+            <li class="nova-things-key"><h6>Nova Things</h6></li>
+            <li class="computer-key"><h6>Computer stuff</h6></li>
+            <li class="math-key"><h6>Math</h6></li>
           </ul>
         </div>
       </div>
